Add updateFilesInManagement and change deleteManagement
